<resources>
    <string name="app_name">EventApplication</string>
    <string name="app_nametr">UserApp</string>
    <string name="e1">Add Event</string>
    <string name="e2">When + Where</string>
    <string name="e3">Date</string>
    <string name="e4">Time</string>
    <string name="e5">Place</string>
    <string name="e6">Who</string>
    <string name="e7">Number of guests</string>
    <string name="e8">How</string>
    <string name="e9">Budget</string>
    <string name="e10">Theme</string>
    <string name="e11">What</string>
    <string name="e12">Photography</string>
    <string name="e13">Food</string>
    <string name="e14">Entertainment</string>
    <string name="e15">ADD</string>
    <string name="e16">Update Event</string>
    <string name="e17">My 21st Birthday</string>
    <string name="e18">Mom\'s Birthday</string>
    <string name="e19">Browny turns 2</string>
    <string name="e20">UPDATE</string>
    <string name="e21">DELETE</string>
    <string name="e22">Events</string>
    <string name="e23">My Events</string>
    <string name="e24">Logout</string>
    <string name="e25">Name</string>
    <string name="e26">dd-mm-yyyy</string>
    <string name="e27">00:00</string>
    <string name="e28">0</string>
    <string name="e29">0.0</string>
    <string name="Signuptr">"Create Account"</string>
    <string name="Signintr">"Sign In"</string>
    <string name="Eventtr">"EVENT X"</string>
    <string name="quesSptr">Be a Service Provider</string>
    <string name="quesUtr">Just a User</string>
    <string name="creataccounttr">"LET'S GO"</string>
    <string name="usernametr">USERNAME</string>
    <string name="nametr">NAME</string>
    <string name="passtr">PASSWORD</string>
    <string name="conpasstr">CONFIRM PASSWORD</string>
    <string name="logotr">logo</string>
    <string name="emailtr">EMAIL</string>
    <string name="citytr">CITY</string>
    <string name="phonetr">CONTACT NUMBER</string>
    <string name="passwordtr">PASSWORD</string>
    <string name="t1" />
    <string name="experience">How was your experience with us? </string>
    <string name="title_activity_nav">Nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="add_new_service">Add New Service</string>
    <string name="Services">Services</string>
    <string name="photography">Photography</string>
    <string name="delete1">Delete</string>
    <string name="edit1">Edit</string>
    <string name="music">Music</string>
    <string name="entertainment">Entertainment</string>
    <string name="delete2">Delete</string>
    <string name="edit2">Edit</string>
    <string name="service_name">Service Name :</string>
    <string name="description">Description :</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="title_activity_add_service">AddService</string>
    <string name="events">Events</string>
    <string name="services">Services</string>
    <string name="feedback">Add Feedback</string>
    <string name="profile">Profile</string>
    <string name="passwordd">PASSWORD</string>
    <string name="passconfd">CONFIRM PASSWORD</string>
    <string name="logoutd">LOG OUT</string>
    <string name="emaild">E-MAIL</string>
    <string name="companyd">COMPANY NAME</string>
    <string name="saveChangesd">Save Changes</string>
    <string name="acceptd">Accept</string>
    <string name="declined">Decline</string>
    <string name="signupd">SIGN UP!</string>
    <string name="event_requests">Event Requests</string>
    <string name="birthday_party">Birthday Party</string>
    <string name="_10_12_2019">10/12/2019</string>
    <string name="eventd">Event</string>
    <string name="dated">Date</string>
    <string name="brand_launching">Brand Launching</string>
    <string name="_08_08_2019">08/08/2019</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="updated">Update</string>
    <string name="usernamed">USERNAME</string>
    <string name="embs_pvt_ltd">EMBS Pvt Ltd</string>
    <string name="encore_gmail_com">encore@gmail.com</string>
    <string name="pwd">********</string>
    <string name="encore_events">Encore Events</string>
    <string name="service_provider_profile">Service Provider Profile</string>

</resources>
