<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2ActivityS">

    <EditText
        android:id="@+id/placeUpdate"
        android:layout_width="232dp"
        android:layout_height="41dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.891" />

    <EditText
        android:id="@+id/budgetUpdate"
        android:layout_width="232dp"
        android:layout_height="41dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e29"
        android:inputType="numberDecimal"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/foodAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.319" />

    <EditText
        android:id="@+id/themeUpdate"
        android:layout_width="232dp"
        android:layout_height="41dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/foodUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/budgetUpdate" />

    <EditText
        android:id="@+id/numOfGuestsUpdate"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginTop="352dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e28"
        android:inputType="number"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/budgetUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/timeUpdate"
        android:layout_width="232dp"
        android:layout_height="41dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e27"
        android:inputType="time"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.459" />

    <EditText
        android:id="@+id/dateUpdate"
        android:layout_width="232dp"
        android:layout_height="41dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/e26"
        android:inputType="date"
        android:textColor="#292929"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/foodUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e13"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.54" />

    <CheckBox
        android:id="@+id/photoUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/e12"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.54" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:layout_marginBottom="16dp"
        android:text="@string/e10"
        android:textColor="#292929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="28dp"
        android:text="@string/e7"
        android:textColor="#292929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:layout_marginBottom="36dp"
        android:text="@string/e9"
        android:textColor="#292929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginBottom="31dp"
        android:text="@string/e4"
        android:textColor="#292929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="17dp"
        android:text="@string/e5"
        android:textColor="#292929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:fontFamily="cursive"
        android:text="@string/e11"
        android:textColor="#292929"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:fontFamily="cursive"
        android:text="@string/e6"
        android:textColor="#292929"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="143dp"
        android:layout_height="37dp"
        android:fontFamily="cursive"
        android:text="@string/e8"
        android:textColor="#292929"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.616" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="170dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="582dp"
        android:fontFamily="cursive"
        android:text="@string/e2"
        android:textColor="#292929"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="374dp"
        android:layout_height="60dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/e16"
        android:textColor="#E91E63"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="413dp"
        android:layout_height="112dp"
        android:background="#0B2A32"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/e16"
        android:textColor="#F8F5F6"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/eventBtnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttsty2"
        android:text="@string/e20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/eventBtnDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodUpdate" />

    <Button
        android:id="@+id/eventBtnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttsty3"
        android:text="@string/e21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eventBtnUpdate"
        app:layout_constraintTop_toBottomOf="@+id/foodUpdate" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="32dp"
        android:text="@string/e3"
        android:textColor="#292929"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/enterUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e14"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.54" />

</androidx.constraintlayout.widget.ConstraintLayout>