<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".T2">

    <Button
        android:id="@+id/eventBtnAdd"
        android:layout_width="235dp"
        android:layout_height="57dp"
        android:background="@drawable/button_accept"
        android:onClick="OpenActivity2"
        android:text="@string/add_new_service"
        android:textColor="#0A0101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="395dp"
        android:layout_height="110dp"
        android:background="#172742"
        android:gravity="center"
        android:text="@string/Services"
        android:textColor="#26eba9"
        android:textSize="40sp"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:text="@string/photography"
        android:textColor="#0E0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.384" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttondelete"
        android:text="@string/delete1"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toStartOf="@+id/btnShowEvent3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/btnShowEvent3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_update"
        android:text="@string/edit1"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.504" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:text="@string/entertainment"
        android:textColor="#0E0A0A"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete2"
        android:background="@drawable/buttondelete"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit2"
        android:background="@drawable/button_update"
        app:layout_constraintBottom_toTopOf="@+id/eventBtnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/btnShowEvent3"
        app:layout_constraintVertical_bias="0.233" />


</androidx.constraintlayout.widget.ConstraintLayout>
