<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whitishtr"
    tools:context=".EditProfileTR">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="45dp"
        android:background="@color/colorPrimaryDarktr"
        >
        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="UPDATE PROFILE"
            android:textSize="27sp"
            android:textColor="#FFF"/>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="123dp"
            android:layout_height="105dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/profpic" />


        <EditText


            android:id="@+id/uname"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/nametr"
            android:inputType="text"
            android:maxLines="1" />



        <EditText

            android:id="@+id/uemail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/emailtr"
            android:inputType="textEmailAddress" />
        <EditText

            android:id="@+id/uphone"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/phonetr"
            android:inputType="phone" />
        <EditText

            android:id="@+id/ucity"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/citytr"
            android:inputType="text" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="Change Password"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/upassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/passtr"
            android:inputType="textPassword" />

        <EditText

            android:id="@+id/uconpassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/conpasstr"
            android:inputType="textPassword" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/buttonstyle4tr"
                android:backgroundTint="#e5eb34"
                android:onClick="onUpdate"
                android:text="UPDATE"
                android:textColor="#000" />



        </LinearLayout>

    </LinearLayout>
</LinearLayout>

